Cambios en los nombres

--- a/about-us.html
+++ b/about-us.html
@@ -278,7 +278,7 @@
               <!-- Team Modern-->
               <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-01-270x236.jpg" alt="" width="270" height="236"/></a>
                 <div class="team-modern-caption">
-                  <h6 class="team-modern-name"><a href="#">María Soriano</a></h6>
+                  <h6 class="team-modern-name"><a href="#">María del Mar Soriano Tortosa</a></h6>
                   <div class="team-modern-status">CEO</div>
                   <ul class="list-inline team-modern-social-list">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
@@ -293,7 +293,7 @@
               <!-- Team Modern-->
               <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-02-270x236.jpg" alt="" width="270" height="236"/></a>
                 <div class="team-modern-caption">
-                  <h6 class="team-modern-name"><a href="#">Antonio Molina</a></h6>
+                  <h6 class="team-modern-name"><a href="#">Antonio Jesús Molina del Pino</a></h6>
                   <div class="team-modern-status">CEO</div>
                   <ul class="list-inline team-modern-social-list">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
@@ -308,7 +308,7 @@
               <!-- Team Modern-->
               <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-03-270x236.jpg" alt="" width="270" height="236"/></a>
                 <div class="team-modern-caption">
-                  <h6 class="team-modern-name"><a href="#">Judith Martinez</a></h6>
+                  <h6 class="team-modern-name"><a href="#">Judith Martínez Gutiérrez </a></h6>
                   <div class="team-modern-status">CEO</div>
                   <ul class="list-inline team-modern-social-list">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
