--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <!-- What We Offer-->
       <section class="section section-md bg-default">
         <div class="container">
-          <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Menu</span></h3>
+          <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Menú</span></h3>
           <div class="row row-md row-30">
             <div class="col-sm-6 col-lg-4">
               <div class="oh-desktop">
@@ -489,7 +489,7 @@
               <article class="thumbnail thumbnail-mary thumbnail-mary-2 wow slideInLeft"><a class="thumbnail-mary-figure" href="images/gallery-7-1200x800-original.jpg" data-lightgallery="item"><img src="images/gallery-7-311x289.jpg" alt="" width="311" height="289"/></a>
                 <div class="thumbnail-mary-caption">
                   <div>
-                    <h6 class="thumbnail-mary-title"><a href="#">Diverse menu</a></h6>
+                    <h6 class="thumbnail-mary-title"><a href="#">Diverse Menú</a></h6>
                     <div class="thumbnail-mary-location">Pick Your Favorite dish</div>
                   </div>
                 </div>
@@ -606,7 +606,7 @@
                 <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
                   <li><a href="about-us.html">Acerca de nosotros</a></li>
                   <li><a href="#">Últimas noticias</a></li>
-                  <li><a href="#">Menu</a></li>
+                  <li><a href="#">Menú</a></li>
                   <li><a href="#">FAQ</a></li>
                   <li><a href="#">Tienda</a></li>
                   <li><a href="contacts.html">Contacta con nosotros</a></li>
