Corrigiendo faltas de ortografía

--- a/about-us.html
+++ b/about-us.html
@@ -188,7 +188,7 @@
               <ul class="nav list-category list-category-down-md-inline-block">
                 <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay="0s"><a class="active" href="#tabs-4-1" data-toggle="tab">Sobre Nosotros</a></li>
                 <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay=".1s"><a href="#tabs-4-2" data-toggle="tab">Nuestra Misión</a></li>
-                <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay=".2s"><a href="#tabs-4-3" data-toggle="tab">Nuestro Onjetivos</a></li>
+                <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay=".2s"><a href="#tabs-4-3" data-toggle="tab">Nuestro Objetivos</a></li>
                 <li class="list-category-item wow fadeInRight" role="presentation" data-wow-delay=".3s"><a href="#tabs-4-4" data-toggle="tab">Nuestros Valores</a></li>
               </ul><a class="button button-xl button-primary button-winona" href="contacts.html">Contacta con nosotros</a>
             </div>
@@ -202,13 +202,13 @@
                 </div>
                 <div class="tab-pane fade" id="tabs-4-2">
                   <h4>Ofreciendo la mejor comida sana de Almería.</h4>
-                  <p>Nuestros platos son equilibrados y sanos para poder disfrutar de todo el sabor sin sentir que te estas saltando la dieta.</p>
+                  <p>Nuestros platos son equilibrados y sanos para poder disfrutar de todo el sabor sin sentir que te estás saltando la dieta.</p>
                   <p></p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-3">
                   <h4>Brindar un servicio al cliente de primer nivel
                   </h4>
-                  <p>Queremos que la esperiencia en nuestro local sea lo más placentera posible, por ello nuestro servicio es de primera calidad, enfocandose en el cliente y cuidandolo desde el minuto uno.</p>
+                  <p>Queremos que la experiencia en nuestro local sea lo más placentera posible, para ello nuestro servicio es de primera calidad, enfocándose en el cliente y cuidándolo desde el minuto uno.</p>
                   <img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-4">
@@ -234,7 +234,7 @@
                   </div>
                   <div class="unit-body">
                     <h5 class="box-icon-classic-title"><a href="#">Entrega gratis</a></h5>
-                    <p class="box-icon-classic-text">Situada en pleno centro de la ciuedad</p>
+                    <p class="box-icon-classic-text">Situada en pleno centro de la ciudad</p>
                   </div>
                 </div>
               </article>
@@ -260,7 +260,7 @@
                   </div>
                   <div class="unit-body">
                     <h5 class="box-icon-classic-title"><a href="#">Ingredientes frescos</a></h5>
-                    <p class="box-icon-classic-text">Todos nuestros ingredientes son frescos y 100% naturales y ecologicos.</p>
+                    <p class="box-icon-classic-text">Todos nuestros ingredientes son frescos y 100% naturales y ecológicos.</p>
                   </div>
                 </div>
               </article>
